--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,6 @@
 		</script>
 		<link rel="stylesheet" type="text/css" href="./semantic/semantic.min.css">
 		<script src="./semantic/semantic.min.js" type="text/javascript"></script>
-		<link rel="stylesheet" href="./chartist/chartist.css">
-		<script src="./chartist/chartist.js"></script>
 		<script src="./index.js" type="text/javascript"></script>
 
   <style type="text/css">
@@ -52,8 +50,27 @@
 </head>
 <body class="pushable">
 <div id="loadingModal" class="ui basic modal">
-	<div id="loadingText" class="ui indeterminate text loader">Checking files.</div>
+  <div class="ui icon message">
+    <i class="notched circle loading icon"></i>
+    <div class="content">
+      <div class="header">
+        Just one second
+      </div>
+      <p id="loadingText">We're fetching that content for you.</p>
+    </div>
+  </div>
 </div>
+
+<div id="errorModal" class="ui basic modal">
+  <div class="ui error icon message">
+    <i class="warning icon"></i>
+    <div class="content">
+      <div class="header">Critical Error</div>
+      <p id="errorMsg">Test error message.</p>
+    </div>
+  </div>
+</div>
+
 <!-- Page Contents -->
 <div class="pusher">
   <div id="tabMenu" class="ui top attached secondary pointing menu">
@@ -104,7 +121,7 @@
         </div>
         <div class="row">
           <div class="fourteen wide column">
-            <div id="filePickerModalContent" class="ui four link cards segment" style="min-height:550px; max-height:550px; overflow-y:scroll">
+            <div id="filePickerModalContent" class="ui four link cards segment" style="min-height:10px; max-height:550px; overflow-y:scroll">
             </div>
           </div>
         </div>
@@ -181,7 +198,7 @@
         </div>
         <div class="row">
           <div class="center aligned column">
-            <a class="ui huge primary button" onclick="run_first_analysis()">Begin Analysis</a>
+            <a class="ui huge primary button" id="beginAnalysisButton" onclick="run_first_analysis()">Begin Analysis</a>
           </div>
         </div>
       </div>
