--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-Content-Security-Policy" content="default-src 'self' https://fonts.googleapis.com/ 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://code.jquery.com/; font-src 'self' https://fonts.gstatic.com/ data: ; img-src 'self' data:">
 
   <!-- Site Properties -->
-  <title>Cycler - An Open Source High-Throughput Cell-Cycle Analysis Application</title>
+  <title>PyCycler - An Open-Source High-Throughput Cell-Cycle Analysis Platform</title>
 		<script src="./jquery/jquery-3.4.1.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			try {
@@ -83,15 +83,20 @@
   <div id="firstPage" class="ui active bottom attached transition fade in tab segment" data-tab="welcome">
     <div class="ui basic segment">
       <div class="ui centered grid">
+        <div class="row"><div class="column"><h1>pyCycler</h1></div></div>
         <div class="row">
-          <div class="column">
-            <h1>Cycler</h1>
+          <div class="fourteen wide column">
             <p style="text-align:justify">Cycler is a high-throughput cell cycle analysis program used for analyzing results from flow cytometry or fluorescent microscopy automatically
               with limited human input for maximum reproducibility.
           </div>
         </div>
         <div class="row">
-          <div class="six wide center aligned column">
+          <div class="fourteen wide column">
+            <img class="ui fluid image" src="./img/TitleImg.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="ten wide center aligned column">
             <h3>Begin by selecting .FCS or .CSV files containing fluorescent DNA data.</h3>
     	      <div class="ui huge primary button" onclick="load_files()" style="margin-top:20px"><i class="folder outline icon"></i> Load Files</div>
           </div>
@@ -272,10 +277,14 @@
         </div>
         <div class="row">
           <div class="fourteen wide column" style="text-align:justify">
-            Cycler was designed for the purpose of making cell-cycle analysis fast and efficient across many experiments conducted at the same time.
-            As such, it relies on consistent data.
-            <p><p>
-            Feel free to drop by our <a href="https://github.com/gbreuer/cycler">Github Repository</a> to report any issues or view the source code.
+            <p style="text-align:justify">
+            Cycler was designed for the purpose of making cell-cycle analysis fast and efficient across multi-sample experiments conducted in the same environment.
+            As such, it requires consistent technique across experiments, as expected peak distribution and observed standard deviation in measurements are expected to
+            be consistent across samples within a relatively small margin of error.
+            </p>
+            <p style="text-align:justify">
+            Feel free to drop by our <a href="https://github.com/gbreuer/cycler">Github Repository</a> to report any issues, view the source code, or for more information.
+            </p>
           </div>
         </div>
       </div>
